More apps and dynamic window rules

--- a/config.jsonc
+++ b/config.jsonc
@@ -21,7 +21,8 @@
         "memory",
         "battery",
         // "battery#bat2",
-        "clock",
+        "backlight",
+	"clock",
         "tray"
         // "custom/power"
     ],
@@ -119,7 +120,7 @@
         "format-icons": ["", "", ""]
     },
     "backlight": {
-        // "device": "acpi_video1",
+        "device": "acpi_video1",
         "format": "{percent}% {icon}",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
